--- a/CSS/kasper.css
+++ b/CSS/kasper.css
@@ -134,6 +134,7 @@ header nav{
 header nav .toggle-menu{
     color: white;
     font-size: 22px;
+    transition: 0.3s;
 }
 @media (min-width: 767px){
     header nav .toggle-menu{
@@ -146,6 +147,9 @@ header nav ul{
 @media (max-width: 767px){
     header nav ul{
         display: none;
+    }
+    header nav .toggle-menu:hover{
+        transform: rotate(-90deg);
     }
     header nav .toggle-menu:hover + ul{
         display: flex;
